# rcli

./: Cargo.toml  Makefile.toml  README.md  cliff.toml  deny.toml  out.txt  output.txt
.github/workflows/: build.yml
fixtures/: b64.txt
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  mod.rs
