[package]
name = "rcli"
version = "0.1.2"
authors = ["Linya <cdthanye32@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.216", features = ["derive"] }
